-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 14.0.0-beta2
-
Ubuntu 22.04 LTS
-
ab09e2dc3 (master)
On Ubuntu, gcc and g++ are not binaries but links to the actual binaries:
qtrob@rob-desktop:/usr/bin$ ls -lh gcc g++ lrwxrwxrwx 1 root root 6 Aug 5 2021 g++ -> g++-11 lrwxrwxrwx 1 root root 6 Aug 5 2021 gcc -> gcc-11 qtrob@rob-desktop:/usr/bin$ ls -lh g??-11 lrwxrwxrwx 1 root root 23 Mai 13 2023 g++-11 -> x86_64-linux-gnu-g++-11 lrwxrwxrwx 1 root root 23 Mai 13 2023 gcc-11 -> x86_64-linux-gnu-gcc-11 qtrob@rob-desktop:/usr/bin$ ls -lh x86_64-linux-gnu-g??-11 -rwxr-xr-x 1 root root 911K Mai 13 2023 x86_64-linux-gnu-g++-11 -rwxr-xr-x 1 root root 907K Mai 13 2023 x86_64-linux-gnu-gcc-11
When started with empty settings, Creator correctly detects both of them. It only uses the path and name of the actual binary for g++. For gcc, it uses the link containing the version number:

This works fine but the inconsistency makes it harder for the user to see that these two compilers belong together.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-31132 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 580307,2 | ProjectExplorer: Sort initial list of toolchain executables | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |